@@ -4,7 +4,7 @@ require 'spec_helper'
 #   As a user
 #   I want to sign in
 #   So I can visit protected areas of the site
-feature 'Sign in' do
+feature 'Sign in', :devise do
 
   # Scenario: User cannot sign in if not registered
   #   Given I do not exist as a user
