@@ -4,7 +4,7 @@ require 'spec_helper'
 #   As a user
 #   I want to sign out
 #   So I can protect my account from unauthorized access
-feature 'Sign out' do
+feature 'Sign out', :devise do
 
   # Scenario: User signs out successfully
   #   Given I am signed in
