@@ -6,7 +6,7 @@ Warden.test_mode!
 #   As a user
 #   I want to delete my user profile
 #   So I can close my account
-feature 'User delete', js: true do
+feature 'User delete', :devise, js: true do
 
   # Scenario: User can delete own account
   #   Given I am signed in
