@@ -6,7 +6,7 @@ Warden.test_mode!
 #   As a user
 #   I want to visit my user profile page
 #   So I can see my personal account data
-feature 'User profile page' do
+feature 'User profile page', :devise do
 
   # Scenario: User sees own profile
   #   Given I am signed in
