@@ -2,6 +2,7 @@ h1. CHANGELOG
 
 h3. 0.4.1 unreleased
 
+* add 'devise' tag to RSpec tests
 * change 'log in' to 'sign in' and 'logout' to 'sign out'
 
 h3. 0.4.0 May 6, 2014
